--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">MyWeather</string>
-    <string name="title_item_detail">Item Detail</string>
+    <string name="app_name">My Weather</string>
+    <string name="title_item_detail">City Weather</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
+    <string name="action_add">Add City</string>
+    <string name="forecast_unknown">Forecast Unknown</string>
 </resources>
