--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,12 @@
     <string name="button_done">Done</string>
     <string name="button_save">Save</string>
     <string name="hint_city_name">City name</string>
+    <string name="button_delete">Delete</string>
+    <string name="button_yes">Yes</string>
+    <string name="button_no">No</string>
+    <string name="todays_forecast">Today\'s Forecast:</string>
+    <string name="humidity">humidity</string>
+    <string name="wind">wind</string>
 
     <!-- API key for OpenWeatherMap.org -->
     <string name="open_weather_map_app_id" translatable="false">c6e381d8c7ff98f0fee43775817cf6ad</string>
